# aether-net

./: CMakeLists.txt  README.md
.github/workflows/: cmake-windows-build.yml
ClientDemo/: GameClient.cpp  GameClient.h  SecurityService.h  UdpProtocol.h  main.cpp
include/: AetherNetExport.h  NatPuncher.h  SocketAddress.h  SocketAddressFactory.h  SocketUtil.h  UdpClient.h  UdpServer.h  UdpSocket.h  WinsockInitializer.h
src/: AetherNet.cpp  NatPuncher.cpp  SocketAddress.cpp  SocketAddressFactory.cpp  SocketUtil.cpp  UdpClient.cpp  UdpServer.cpp  UdpSocket.cpp  server_main.cpp
tests/: SocketAddress_test.cpp  UdpSocket_test.cpp
